--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -2,6 +2,7 @@ $color_primary: #FD832F;
 $color_secondary: #EEE4D7;
 
 $off_white: #FFF6E9;
+$light_grey: #666;
 $mid_grey: #333;
 $dark_grey: #252627;
 $black: #111;
