--- a/sass/layout/_game-single.scss
+++ b/sass/layout/_game-single.scss
@@ -90,16 +90,20 @@
     top: 50%;
     right: 0;
     transform: translateY(-50%);
-    padding: 20px;
+    padding: 25px;
     background-color: $black;
     text-transform: uppercase;
     color: $light_grey;
+    font-size: clamp(1.5rem, 1rem + 1.3333vw, 2.25rem); // 24px - 36px
     font-weight: 700;
+    line-height: 0.8;
     text-align: center;
 
     span {
         color: $off_white;
         display: block;
+        font-size: clamp(0.875rem, 0.7083rem + 0.4444vw, 1.125rem); // 14px - 18px
+        margin-bottom: 8px;
     }
 
     em {
@@ -113,16 +117,114 @@
         gap: 10px;
         margin-top: 10px;
 
-        div {
-            background-color: $color_primary;
-            color: $off_white;
-            border: none;
-            padding: 5px 10px;
+        .gallery-prev,
+        .gallery-next {
+            position: relative;
+            background-color: $mid_grey;
             cursor: pointer;
-            transition: background-color 0.3s;
+            width: 54px;
+            height: 0;
+            padding-top: 54px;
+            overflow: hidden;
+
+            &:after {
+                content: '';
+                display: block;
+                position: absolute;
+                right: 0;
+                top: 0;
+                height: 100%;
+                width: 100%;
+                background: url(assets/images/arrow-down.svg) no-repeat center;
+                background-size: 18px auto;
+                transform: rotate(90deg);
+                filter: brightness(0) saturate(100%) invert(40%) sepia(0%) saturate(53%) hue-rotate(229deg) brightness(97%) contrast(85%);
+            }
 
             &:hover {
-                background-color: darken($color_primary, 10%);
+
+                &:after {
+                    filter: brightness(0) saturate(100%) invert(70%) sepia(79%) saturate(4204%) hue-rotate(341deg) brightness(110%) contrast(98%);
+                }
+            }
+        }
+
+        .gallery-next {
+            &:after {
+                transform: rotate(-90deg);
+            }
+        }
+    }
+}
+
+// related news
+.game-related-news {
+    padding: clamp(40px, 20vh, 100px) 0;
+
+    .section-content {
+        padding: 0 calc($grid-gap / 2);
+    }
+
+    .subtitle {
+        margin-bottom: clamp(15px, 5vw, 25px);
+    }
+}
+
+.related-news-blocks {
+    display: flex;
+    flex-direction: column;
+    gap: calc($grid-gap * 1.5);
+    
+    @include breakpoint($medium) {
+        flex-direction: row;
+    }
+
+    .related-news-item {
+        position: relative;
+        filter: drop-shadow(0 0 20px rgba($black, 0.37));
+        overflow: hidden;
+
+        @include breakpoint($medium) {
+            width: calc((100% / 3) - $grid-gap + ($grid-gap / 3));
+        }
+
+        img {
+            width: 100%;
+            height: auto;
+            aspect-ratio: 16/9;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        &:hover {
+            img {
+                transform: scale(1.05);
+            }
+        }
+
+        // &:hover {
+        //     .news-content {
+        //         transform: translateY(0);
+        //     }
+        // }
+    }
+
+    .news-content {
+        background-image: linear-gradient(to bottom, rgba($black, 0) 0%, rgba($black, 100) 100%);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        padding: 40px 20px 20px;
+        font-weight: 700;
+        color: $off_white;
+        // transition: all 0.3s ease-in-out;
+        // transform: translateY(100%);
+
+        p {
+            margin: 0;
+
+            &.posted-on {
+                color: $color_primary;
             }
         }
     }
