--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -18,6 +18,7 @@ h1, h2, h3, h4, h5, h6 {
 .subtitle {
 	font-size: 1.5rem;
 	font-weight: 700;
+	line-height: 0.9;
 	text-transform: uppercase;
 	color: $color_primary;
 	margin-bottom: 0.25rem;
