Update styles and layouts for game single page

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -19,6 +19,7 @@
         background-color: rgba($dark_grey, 0.66);
         color: $color_secondary;
         position: relative;
+        margin-right: auto;
 
         &:hover {
             color: $color_primary;
