--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -36,73 +36,102 @@ input[type="submit"] {
 
 .fv-button {
 	@extend .button;
+	background-color: transparent;
 	position: relative;
 	transition: all .15s ease-in-out;
 	margin: 0 10px 10px 0;
+	border-image-source: url("assets/images/button-border.svg");
+	border-image-width: 8px 16px 15px 28px;
+	border-image-slice: 8 16 15 28;
+	// border-image-width: 16px 30px 29px 54px;
+	border-image-outset: 0px 0px 0px 0px;
+	border-image-repeat: stretch stretch;
 
-	&:before,
 	&:after {
 		content: '';
 		display: block;
 		position: absolute;
-		background-color: darken($color_primary, 10%);
+		z-index: -1;
+		top: 6px;
+		right: 14px;
+		bottom: 13px;
+		left: 26px;
+		background-color: $color_primary;
 		transition: all .15s ease-in-out;
 	}
 
-	&:before {
-		top: 4px;
-		right: -10px;
-		height: 100%;
-		width: 10px;
-		transform: skewY(45deg);
-	}
+	// &:before,
+	// &:after {
+	// 	content: '';
+	// 	display: block;
+	// 	position: absolute;
+	// 	background-color: darken($color_primary, 10%);
+	// 	transition: all .15s ease-in-out;
+	// }
 
-	&:after {
-		bottom: -10px;
-		left: 4px;
-		width: 100%;
-		height: 10px;
-		transform: skewX(45deg);
-	}
+	// &:before {
+	// 	top: 4px;
+	// 	right: -10px;
+	// 	height: 100%;
+	// 	width: 10px;
+	// 	transform: skewY(45deg);
+	// }
+
+	// &:after {
+	// 	bottom: -10px;
+	// 	left: 4px;
+	// 	width: 100%;
+	// 	height: 10px;
+	// 	transform: skewX(45deg);
+	// }
 
 	&:hover {
-		margin-top: 4px;
-		margin-left: 4px;
-		margin-right: 6px;
-		margin-bottom: 6px;
+		// margin-top: 4px;
+		// margin-left: 4px;
+		// margin-right: 6px;
+		// margin-bottom: 6px;
 		filter: drop-shadow(0 0 5px rgba($color_primary, 0.5));
-
-		&:before {
-			top: 3px;
-			right: -6px;
-			width: 6px;
-		}
+		border-image-width: 8px 8px 7px 14px;
 
 		&:after {
-			bottom: -6px;
-			left: 3px;
-			height: 6px;
+			top: 3px;
+			right: 7px;
+			bottom: 6px;
+			left: 13px;
 		}
+		
+
+		// &:before {
+		// 	top: 3px;
+		// 	right: -6px;
+		// 	width: 6px;
+		// }
+
+		// &:after {
+		// 	bottom: -6px;
+		// 	left: 3px;
+		// 	height: 6px;
+		// }
 	}
 
 	&:active {
-		margin-top: 8px;
-		margin-left: 8px;
-		margin-right: 2px;
-		margin-bottom: 2px;
+		// margin-top: 8px;
+		// margin-left: 8px;
+		// margin-right: 2px;
+		// margin-bottom: 2px;
 		filter: drop-shadow(0 0 10px rgba($color_primary, 1));
 
-		&:before {
-			top: 1px;
-			right: -2px;
-			width: 2px;
-		}
+		// &:before {
+		// 	top: 1px;
+		// 	right: -2px;
+		// 	width: 2px;
+		// }
 
-		&:after {
-			bottom: -2px;
-			left: 1px;
-			height: 2px;
-		}
+		// &:after {
+		// 	bottom: -2px;
+		// 	left: 1px;
+		// 	height: 2px;
+		// }
 	}
 }
 
