--- a/sass/layout/_game-single.scss
+++ b/sass/layout/_game-single.scss
@@ -1,5 +1,9 @@
 .game-single {
+    background-color: $black;
+
     .hero-slide {
+        z-index: 1;
+
         .slide-content {
             height: 80%;
         }
@@ -11,12 +15,14 @@
 }
 
 .content-background-image {
+    z-index: 0;
+    pointer-events: none;
     
     img {
         filter: saturate(0);
         background-blend-mode: lighten;
         opacity: 0.1;
-        mask-image: linear-gradient(to bottom, white, black);
+        mask-image: linear-gradient(to bottom, black 0, black 33%, transparent);
         height: unset;
         aspect-ratio: 4/3;
     }
@@ -29,22 +35,21 @@
     @include breakpoint($max_width_padded) {
         padding: 0;
     }
-
-    .divider-title {
-        text-transform: uppercase;
-    }
 }
 
 .game-intro {
+    position: relative;
+    z-index: 2;
+    margin-bottom: clamp(30px, 20vh, 60px);
 
     .section-content {
         max-width: $max_width;
         margin: 0 auto 0;
-        padding: 0 calc($grid-gap / 2);
+        // padding: 0 calc($grid-gap / 2);
         display: flex;
         flex-direction: column;
         align-items: stretch;
-        background-color: $dark_grey;
+        background-color: $black;
 
         @include breakpoint($mediumlarge) {
             flex-direction: row;
@@ -58,6 +63,9 @@
     .intro-copy {
         // padding: 85px 74px;
         padding: clamp(15px, 5vw, 85px) clamp(10px, 5vw, 74px);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         p {
             &:last-of-type {
@@ -65,18 +73,58 @@
             }
         }
     }
+
+    .intro-media {
+        position: relative;
+        aspect-ratio: 16/9;
+
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 }
 
 .text-and-image {
-    display: flex;
-    margin-bottom: calc($grid-gap * 2);
+    margin: 0 auto calc($grid-gap * 2);
 
-    @include breakpoint($large) {
-        margin-bottom: calc($grid-gap * 3);
+    @include breakpoint($mediumlarge) {
+        
+        display: flex;
+        align-items: center;
+        max-width: $max_width;
     }
 
-    &:nth-of-type(even) {
-        flex-direction: row-reverse;
+    .text {
+        margin-bottom: clamp(10px, 20vh, 20px);
+    }
+
+    @include breakpoint($mediumlarge) {
+        margin-bottom: calc($grid-gap * 3);
+
+        .text {
+            max-width: calc(100/3 * 1%);
+            padding-right: clamp(30px, 5vw, 74px);
+        }
+        .image {
+            max-width: calc(100/3 * 2%);
+        }
+    }
+
+    &:nth-of-type(odd) {
+        
+        @include breakpoint($large) {
+            flex-direction: row-reverse;
+
+            .text {
+                padding-right: 0;
+                padding-left: clamp(30px, 5vw, 74px);
+            }
+        }
     }
 }
 
