Update image scaling in _careers.scss and add .hintrc configuration file

--- a/sass/layout/_careers.scss
+++ b/sass/layout/_careers.scss
@@ -33,7 +33,7 @@
         img {
             opacity: 0.75;
             filter: blur(10px);
-            scale: 1.1;
+            transform: scale(1.1);
         }
     }
 
