Update font size and add comments for clarity in _about.scss and template-careers.php

--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -39,7 +39,7 @@ body.page-template-template-about {
 
     .title {
         text-transform: uppercase;
-        font-size: clamp(4rem, 2.75rem + 3.3333vw, 5.875rem);
+        font-size: clamp(4rem, 2.75rem + 3.3333vw, 5.875rem); // 44px - 64px
         line-height: 1;
         margin-bottom: 20px;
     }
