Update layout to include news section on game single page

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -38,6 +38,7 @@ Text Domain: dekiru
 	'layout/home',
 	'layout/hero-banner',
 	'layout/about',
+	'layout/news',
 	'layout/games',
 	'layout/game-single',
 	'layout/careers',
