Update margin for submit button in _buttons.scss

--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -39,7 +39,7 @@ input[type="submit"] {
 	background-color: transparent;
 	position: relative;
 	transition: all .15s ease-in-out;
-	margin: 0 10px 10px 0;
+	// margin: 0 10px 10px 0;
 	border-image-source: url("assets/images/button-border.svg");
 	border-image-width: 8px 16px 15px 28px;
 	border-image-slice: 8 16 15 28;
