--- a/sass/layout/_news.scss
+++ b/sass/layout/_news.scss
@@ -22,11 +22,6 @@
             width: calc((100% / 3) - calc($grid-gap * 1.5) + (calc($grid-gap * 1.5) / 3));
         }
 
-        &.second-post,
-        &.third-post {
-
-        }
-
         img {
             width: 100%;
             height: auto;
@@ -42,6 +37,10 @@
 
         &:hover {
 
+            .entry-header {
+                margin-bottom: 0;
+            }
+
             .entry-content,
             .entry-footer {
                 // transform: translateY(0);
@@ -54,23 +53,11 @@
                         rgba($dark_grey, 100) 33%,
                         rgba($dark_grey, 100) 100%);
             }
-
-            // .entry-footer {
-            //     border-top: 1px solid rgba($off_white, 0.15);
-            // }
         }
     }
 
     .news-content {
-        background-image: linear-gradient(to bottom,
-                rgba($dark_grey, 0) 0%,
-                rgba($dark_grey, 100) 100%);
-        transition: all 0.3s ease-in-out;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        padding: 40px 20px 20px;
+        padding: 40px clamp(20px, 5vw, 40px) 20px;
         font-weight: 700;
         color: $off_white;
 
@@ -111,7 +98,6 @@
         font-weight: 400;
         margin-bottom: 10px;
         overflow: hidden;
-        line-height: 1.2;
         display: -webkit-box;
         -webkit-box-orient: vertical;
 
@@ -148,6 +134,8 @@
     .entry-footer {
         line-height: 1;
         position: relative;
+        text-transform: uppercase;
+        font-weight: 700;
         // border-top: 1px solid rgba($off_white, 0.15);
 
         .cats {
@@ -190,11 +178,36 @@
         .news-content {
             all: unset;
             max-width: 50%;
-            background: rgba($black, 0.75);
+            background: rgba($black, 0.9);
+            padding: clamp(20px, 5vw, 80px);
+            font-size: 20px;
+            line-height: 1.5;
+
+            @include breakpoint($medium) {
+                max-width: 30%;
+            }
+        }
+
+        .entry-title {
+            font-size: clamp(2rem, 1.5rem + 1.3333vw, 2.75rem); // 32px - 44px
+            margin-top: 15px;
+        }
+
+        .entry-meta {
+            color: $off_white;
+            margin-bottom: 10px;
         }
 
         .entry-content {
             display: unset;
+        }
+
+        .entry-footer {
+            font-size: 18px;
+        }
+
+        .read-more {
+            margin-top: 20px;
         }
     }
 
@@ -220,6 +233,7 @@
         }
     }
 
+    // default styling for only news blocks that aren't 1st, 2nd or 3rd
     &:not(.first-post, .second-post, .third-post) {
 
         &:before,
@@ -254,6 +268,26 @@
             }
         }
 
+        .entry-header {
+            margin-bottom: -15px;
+            transition: margin-bottom 0.3s ease-in-out;
+        }
+
+        .news-content {
+            padding: 40px clamp(20px, 5vw, 40px) 20px;
+            background-image: linear-gradient(to bottom,
+            rgba($dark_grey, 0) 0%,
+            rgba($dark_grey, 100) 100%);
+            transition: all 0.3s ease-in-out;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+        }
+
+        .entry-content {
+            line-height: 1.2;
+        }
 
         .entry-content,
         .entry-footer {
