--- a/sass/forms/_forminator.scss
+++ b/sass/forms/_forminator.scss
@@ -1,16 +1,21 @@
 .forminator-custom-form {
     display: flex;
+    flex-direction: column;
+    gap: $grid-gap;
     position: relative;
-    // gap: $grid-gap;
 
     button {
-        min-width: 0;
+        // min-width: 0;
         height: 54px;
         cursor: pointer;
     }
 
     label {
-        display: none;
+        font-weight: 700;
+        text-transform: uppercase;
+        font-size: 20px;
+        display: block;
+        padding-bottom: 10px;
     }
 
     input[type='text'],
@@ -21,6 +26,7 @@
         border: none;
         padding: 10px;
         width: 100%;
+        font-size: 20px;
         
         &:focus {
             outline: none;
@@ -32,18 +38,29 @@
 .forminator-row {
     margin: 0 !important;
     display: flex;
-    flex-direction: column;
+    gap: $grid-gap;
+    align-items: flex-start;
+    // flex-direction: column;
     width: 100%;
 
     &.forminator-row-last {
         display: block !important;
     }
-}
-.forminator-row-last {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: unset;
+
+    > * {
+        flex: 1;
+    }
+
+    textarea {
+        background-color: $black;
+        color: $off_white;
+        border: 0;
+        outline: 0;
+        border-radius: 0;
+        font-size: 20px;
+        padding: 10px;
+        width: 100%;
+    }
 }
 .forminator-col {
     padding: 0 !important;
@@ -58,3 +75,23 @@
 // .forminator-response-message {
 
 // }
+
+.forminator-select--field {
+    background: $black;
+    color: $off_white;
+    height: 58px;
+    width: 100%;
+    outline: 0;
+    border: 0;
+    padding: 10px;
+    position: relative;
+    font-size: 20px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: $black url(assets/images/arrow-down-orange.svg) center right 10px no-repeat;
+    background-size: 24px 16px;
+}
+
+.forminator-button {
+    @extend .fv-button;
+}
