--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -1,5 +1,5 @@
 .site-main.contact-us {
-    padding: 280px 0 300px;
+    padding: 180px 0 200px;
 
     .section-content {
         display: flex;
@@ -14,5 +14,88 @@
                 flex: 0 1 50%;
             }
         }
+    }
+
+    .section-content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, auto);
+        grid-column-gap: calc($grid-gap * 3);
+        grid-row-gap: $grid-gap;
+        align-items: end;
+    }
+        
+    .image-block { grid-area: 1 / 1 / 2 / 2; }
+    .connect { grid-area: 2 / 1 / 3 / 2; }
+    .form-block { grid-area: 1 / 2 / 3 / 3; }
+
+    .image-block {
+        position: relative;
+
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 50%;
+            right: 0;
+            transform: translate(20%, -20%);
+            width: 80vw;
+            z-index: -1;
+            aspect-ratio: 7 / 3;
+            background-image: radial-gradient(rgba($off_white, 0.25) 0, rgba($dark_grey, 0) 70%);
+            pointer-events: none;
+        }
+
+        img {
+            max-width: 520px;
+            margin: 0 auto;
+        }
+    }
+
+    .section-title {
+        text-transform: uppercase;
+        line-height: 0.8;
+    }
+
+    .connect-title {
+        text-transform: uppercase;
+        font-weight: 700;
+        display: flex;
+        align-items: center;
+        position: relative;
+
+        &:before,
+        &:after {
+            content: '';
+            flex-grow: 1;
+            height: 1px;
+            background-color: rgba(white, 0.14);
+        }
+
+        &:before {
+            margin-right: $grid-gap;
+        }
+
+        &:after {
+            margin-left: $grid-gap;
+        }
+    }
+
+    .social-links {
+        justify-content: center;
+        filter: drop-shadow(4px 10px 20px rgba(0, 0, 0, 0.25));
+
+        img {
+            height: 56px;
+        }
+
+        a {
+            filter: brightness(0) saturate(100%) invert(70%) sepia(79%) saturate(4204%) hue-rotate(341deg) brightness(110%) contrast(98%);
+        }
+    }
+
+    .intro-copy {
+        font-size: 22px;
+        color: rgba($off_white, 0.6);
     }
 }
