--- a/sass/layout/_career-single.scss
+++ b/sass/layout/_career-single.scss
@@ -22,9 +22,14 @@
         padding: 60px clamp(55px, 10vw, 110px);
     }
 
+    .title {
+        font-size: clamp(1.875rem, 1.6875rem + 0.75vw, 2.25rem);
+    }
+
     .quick-details {
         text-transform: uppercase;
-        font-size: 24px;
+        // font-size: 24px;
+        font-size: clamp(1.125rem, 0.9375rem + 0.75vw, 1.5rem);
         line-height: 0.8em;
         font-weight: 700;
 
@@ -63,7 +68,7 @@
     }
 
     .job-description {
-        padding: 60px clamp(55px, 10vw, 110px);
+        padding: 60px clamp(10px, 5vw, 80px) 0;
         position: relative;
         font-size: 20px;
 
@@ -104,30 +109,36 @@
         }
     
         &.form-overlay {
+            .job-contents,
+            .apply {
+                display: none;
+            }
             .application-form {
                 display: flex;
             }
         }
     }
 
-    // .apply {
-    //     position: relative;
-    //     z-index: -1;
-    // }
+    .apply {
+        display: flex;
+        justify-content: center;
+        transform: translateY(50%);
+    }
 
     .application-form {
         display: none;
         background-color: $dark-grey;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 2;
-        padding: 60px clamp(55px, 10vw, 110px);
+        // position: absolute;
+        // top: 0;
+        // left: 0;
+        // width: 100%;
+        // height: 100%;
+        // z-index: 2;
+        // padding: 60px clamp(55px, 10vw, 110px);
         // display: flex;
         flex-direction: column;
         align-items: center;
+        padding-bottom: 60px;
 
         ul, ol {
             padding: 0;
@@ -135,9 +146,12 @@
         }
 
         .forminator-col {
-            width: calc(50% - calc($grid-gap * 2));
-            flex-basis: 0 !important;
-            margin-bottom: 0 !important;
+            @include breakpoint($mediumlarge) {
+                width: calc(50% - calc($grid-gap * 2));
+                flex-basis: 0 !important;
+                margin-bottom: 0 !important;
+            }
+            
         }
     }
 }
