--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -102,7 +102,8 @@
         }
 
         li {
-            &.current-menu-item {
+            &.current-menu-item,
+            &.current-page-ancestor {
                 a {
                     color: $dark_grey;
                     background-color: $color_secondary;
