--- a/sass/layout/_social.scss
+++ b/sass/layout/_social.scss
@@ -31,7 +31,7 @@
         
         a {
             filter: brightness(0) saturate(100%) invert(52%) sepia(96%) saturate(900%) hue-rotate(339deg) brightness(103%) contrast(98%);
-            transition: all 0.25s ease-in-out;
+            transition: filter 0.25s ease-in-out;
             
             &:hover {
                 filter: brightness(0) saturate(100%) invert(9%) sepia(5%) saturate(452%) hue-rotate(169deg) brightness(99%) contrast(86%); // dark grey
