Update form styling and layout for career single page

--- a/sass/layout/_career-single.scss
+++ b/sass/layout/_career-single.scss
@@ -160,7 +160,10 @@
 
         .forminator-col-md-6{
             flex-basis: 0 !important;
-            margin-bottom: 0 !important;
+
+            @include breakpoint($mediumlarge) {
+                margin-bottom: 0 !important;
+            }
         }
     }
 }
