--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -42,14 +42,21 @@
             content: '';
             display: block;
             position: absolute;
-            top: 50%;
-            right: 0;
-            transform: translate(20%, -20%);
-            width: 80vw;
+            bottom: 0;
+            left: 50%;
+            transform: translate(-50%, 10%);
+            width: 120vw;
+            max-width: 600px;
             z-index: -1;
             aspect-ratio: 7 / 3;
             background-image: radial-gradient(rgba($off_white, 0.25) 0, rgba($dark_grey, 0) 70%);
             pointer-events: none;
+
+            @include breakpoint($large) {
+                width: 80vw;
+                max-width: unset;
+                transform: translate(-50%, 20%);
+            }
         }
 
         img {
@@ -68,6 +75,7 @@
     }
 
     .connect {
+        margin: 0 auto;
         order: 3;
     }
 
