--- a/sass/layout/_pages.scss
+++ b/sass/layout/_pages.scss
@@ -1,4 +1,5 @@
-.page-template-default.page {
+.page-template-default.page,
+.error404 {
     background-color: $dark-grey;
 
     .background-image {
@@ -12,25 +13,26 @@
     }
 }
 
-.site-main.page {
+.site-main.page,
+.error-404 {
 	background-color: $dark-grey;
 	max-width: 960px;
 	margin: 100px auto;
-    padding: 0 clamp(20px, 5vw, 40px);
+    padding: 0 clamp(20px, 5vw, 40px) 60px;
     filter: drop-shadow(0 5px 10px rgba(0, 0, 0, 0.5));
 
     @include breakpoint($mediumlarge) {
         margin: 140px auto;
     }
 
-    .section-title {
+    .page-title {
         background-color: $black;
         margin: 0 calc(clamp(20px, 5vw, 40px) * -1) 2rem;
         padding: clamp(20px, 5vh, 60px) clamp(20px, 5vw, 40px);
         line-height: 1;
     }
 
-    h1:not(.section-title) {
+    h1:not(.page-title) {
         font-size: clamp(2.25rem, 1.75rem + 1.6667vw, 3rem);
         margin: 0.5em 0;
         line-height: 1.2;
