Update styling and layout for career single page form

--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -60,36 +60,8 @@ input[type="submit"] {
 		transition: all .15s ease-in-out;
 	}
 
-	// &:before,
-	// &:after {
-	// 	content: '';
-	// 	display: block;
-	// 	position: absolute;
-	// 	background-color: darken($color_primary, 10%);
-	// 	transition: all .15s ease-in-out;
-	// }
-
-	// &:before {
-	// 	top: 4px;
-	// 	right: -10px;
-	// 	height: 100%;
-	// 	width: 10px;
-	// 	transform: skewY(45deg);
-	// }
-
-	// &:after {
-	// 	bottom: -10px;
-	// 	left: 4px;
-	// 	width: 100%;
-	// 	height: 10px;
-	// 	transform: skewX(45deg);
-	// }
 
 	&:hover {
-		// margin-top: 4px;
-		// margin-left: 4px;
-		// margin-right: 6px;
-		// margin-bottom: 6px;
 		filter: drop-shadow(0 0 5px rgba($color_primary, 0.5));
 		border-image-width: 8px 8px 7px 14px;
 
@@ -99,39 +71,23 @@ input[type="submit"] {
 			bottom: 6px;
 			left: 13px;
 		}
-		
 
-		// &:before {
-		// 	top: 3px;
-		// 	right: -6px;
-		// 	width: 6px;
-		// }
-
-		// &:after {
-		// 	bottom: -6px;
-		// 	left: 3px;
-		// 	height: 6px;
-		// }
+		&:before {
+			content: '';
+			display: block;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			z-index: -2;
+			transform: translate(-50%, -50%);
+			width: 110%;
+			height: 110%;
+			background-image: radial-gradient(circle, rgba($color_primary, 0.25) 0%, rgba($color_primary, 0.5) 30%, transparent 100%);
+		}
 	}
 
 	&:active {
-		// margin-top: 8px;
-		// margin-left: 8px;
-		// margin-right: 2px;
-		// margin-bottom: 2px;
 		filter: drop-shadow(0 0 10px rgba($color_primary, 1));
-
-		// &:before {
-		// 	top: 1px;
-		// 	right: -2px;
-		// 	width: 2px;
-		// }
-
-		// &:after {
-		// 	bottom: -2px;
-		// 	left: 1px;
-		// 	height: 2px;
-		// }
 	}
 }
 
