--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -6,6 +6,7 @@ $light_grey: #666;
 $mid_grey: #333;
 $dark_grey: #252627;
 $black: #111;
+$near_black: #1F2022;
 
 $color__background-body: #252627;
 $color__background-screen: #f1f1f1;
