--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -40,7 +40,7 @@ input[type="submit"] {
 	position: relative;
 	transition: all .15s ease-in-out;
 	// margin: 0 10px 10px 0;
-	border-image-source: url("assets/images/button-border.svg");
+	border-image-source: url(assets/images/button-border.svg);
 	border-image-width: 8px 16px 15px 28px;
 	border-image-slice: 8 16 15 28;
 	// border-image-width: 16px 30px 29px 54px;
@@ -59,7 +59,6 @@ input[type="submit"] {
 		background-color: $color_primary;
 		transition: all .15s ease-in-out;
 	}
-
 
 	&:hover {
 		filter: drop-shadow(0 0 5px lighten($color_primary, 0.5));
