--- a/sass/layout/_news.scss
+++ b/sass/layout/_news.scss
@@ -325,3 +325,29 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.searchform {
+    input[type='text'] {
+        height: 58px;
+        color: $off_white;
+        border: none;
+        padding: 10px 10px 10px 50px;
+        // width: 100%;
+        width: 320px;
+        font-size: 20px;
+        background: $black url(assets/images/icon-magnify.png) left 10px center no-repeat;
+        background-size: 22px auto;
+        
+        &:focus {
+            outline: none;
+        }
+    }
+
+    .fv-button {
+        margin-left: -20px;
+    }
+
+    label {
+        display: none;
+    }
+}
