--- a/sass/layout/_news.scss
+++ b/sass/layout/_news.scss
@@ -1,4 +1,5 @@
 .news-blocks {
+    background-color: $near_black;
     display: flex;
     flex-direction: column;
     gap: calc($grid-gap * 1.5);
