--- a/sass/layout/_posts.scss
+++ b/sass/layout/_posts.scss
@@ -67,11 +67,11 @@
 
     .post {
         a {
-            color: $color-primary;
+            color: $color_primary;
             transition: all 0.3s ease-in-out;
     
             &:visited {
-                color: $color-primary;
+                color: $color_primary;
             }
             
             &:hover {
