--- a/sass/layout/_pages.scss
+++ b/sass/layout/_pages.scss
@@ -46,7 +46,7 @@
 
     a {
         font-weight: 700;
-        color: $color-primary;
+        color: $color_primary;
         text-decoration: none;
         transition: all 0.3s ease-in-out;
 
